welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:10: error: illegal start of simple expression
  if (Baggle >= 3); (!sortieTrouvee()) {
                  ^Poucet:20: error: ';' expected but 'else' found.
  } else if (Baggle <= 2) {
    ^